fix: restore dark mode by adding [data-theme=dark] overrides to index.css and converting hardcoded colors to CSS variables in sign/link/calendar.css
- Merged Soyorin-Work dark mode overrides into WangGuan-based index.css
- Replaced hardcoded colors in sign.css: white->var(--bg-card), #828487->var(--text-muted), black->var(--border-color)
- Replaced hardcoded #777777 in link.css with var(--text-muted)
- Replaced hardcoded white in calendar.css with var(--bg-card)

--- a/src/styles/sign.css
+++ b/src/styles/sign.css
@@ -28,7 +28,7 @@
 }
 .qrcode-container .sub-container img{
     border-width: 1px;
-    border-color: black;
+    border-color: var(--border-color);
     border-style: solid;
     border-radius: 5px;
     width:100%;
@@ -38,7 +38,7 @@
     line-height: 30px;
     text-align: center;
     border-width: 1px;
-    border-color: black;
+    border-color: var(--border-color);
     border-style: solid;
     border-radius: 5px;
 }
@@ -50,7 +50,7 @@
 }
 .poster-container img{
     border-width: 1px;
-    border-color: black;
+    border-color: var(--border-color);
     border-style: solid;
     border-radius: 5px;
     width: 500px;
@@ -60,7 +60,7 @@
     line-height: 30px;
     text-align: center;
     border-width: 1px;
-    border-color: black;
+    border-color: var(--border-color);
     border-style: solid;
     border-radius: 5px;
 }
@@ -70,7 +70,7 @@
     padding-left: 10px;
     padding-right: 10px;
     display:inline-block;
-    color: #828487;
+    color: var(--text-muted);
 }
 @media screen and (max-width: 1200px){
     .sign-container {
@@ -91,7 +91,7 @@
 
     .poster-container img{
         border-width: 1px;
-        border-color: black;
+        border-color: var(--border-color);
         border-style: solid;
         border-radius: 5px;
         width: 100%;
@@ -102,7 +102,7 @@
         line-height: 30px;
         text-align: center;
         border-width: 1px;
-        border-color: black;
+        border-color: var(--border-color);
         border-style: solid;
         border-radius: 5px;
     }
